# flaskPydanticDb

./: addinfo.txt  main.py  pyproject.toml
