[tool.poetry]
name = "flaskpydanticdb"
version = "0.1.0"
description = ""
authors = ["lantemir <temiros@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
